k8s/deploy.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: cardano-relay
  namespace: cardano
  labels:
    app: relay
spec:
  replicas: 4

  # 2. How do want to update the pods?
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  # 3. Which pods are managed by this deployment?
  selector:
    # This must match the labels we set on the pod!
    matchLabels:
      app: relay
  
  # This template field is a regular pod configuration 
  # nested inside the deployment spec
  template:
    metadata:
      # Set labels on the pod.
      # This is used in the deployment selector.
      labels:
        app: relay
    spec:
      containers:
        - name: cardano-relay
          image: dshiell15/cardano-node1.26.0
	  ports:
	  - containerPort: 3001
