k8s/producer.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: producer
  namespace: cardano
  labels:
    role: producer
spec:
  serviceName: producer
  replicas: 1
  selector:
    matchLabels:
      role: producer
  template:
    metadata:
      labels:
        role: producer
    spec:
      restartPolicy: Always
      securityContext:
        runAsUser: 1001
        fsGroup: 1001
      containers:
        - name: producer
          image: dshiell15/cardano-node:1.26.1
          args: ["run", "--topology", "/config/mainnet-topology.json", "--database-path", "/data/db", "--socket-path", $(CARDANO_NODE_SOCKET_PATH), "--host-addr", "0.0.0.0", "--port", "3001", "--config", "/config/mainnet-config.json", "--shelley-kes-key", "kes.skey", "--shelley-vrf-key", "vrf.skey", "--shelley-operational-certificate", "node.cert"]   
          volumeMounts:
          - name: data
            mountPath: /data
          - name: ipc
            mountPath: /ipc
          - name: config
            mountPath: /config
            readOnly: true
          ports:
          - containerPort: 3001
          securityContext:
            allowPrivilegeEscalation: false
      affinity:
        podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
             - labelSelector:
                 matchExpressions:
                   - key: "role"
                     operator: In
                     values:
                     - relay
               topologyKey: "kubernetes.io/hostname"
      volumes:
      - name: ipc
        emptyDir:
          medium: Memory
      - name: config
        configMap:
          name: configs
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "longhorn"
      resources:
        requests:
          storage: 20Gi
