k8s/relay.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: relay
  namespace: cardano
  labels:
    role: relay
spec:
  serviceName: relay
  replicas: 4
  selector:
    matchLabels:
      role: relay
  template:
    metadata:
      labels:
        role: relay
    spec:
      restartPolicy: Always
      securityContext:
        runAsUser: 1001
        fsGroup: 1001
      containers:
        - name: relay
          image: dshiell15/cardano-node:1.26.1
          args: ["run", "--topology", "/config/mainnet-relay-topology.json", "--database-path", "/data/db", "--socket-path", $(CARDANO_NODE_SOCKET_PATH), "--host-addr", "0.0.0.0", "--port", "3001", "--config", "/config/mainnet-config.json"]   
          volumeMounts:
          - name: data
            mountPath: /data
          - name: ipc
            mountPath: /ipc
          - name: config
            mountPath: /config
            readOnly: true
          ports:
          - containerPort: 3001
          - containerPort: 12798
          securityContext:
            allowPrivilegeEscalation: false
      affinity:
        podAntiAffinity:
           requiredDuringSchedulingIgnoredDuringExecution:
             - labelSelector:
                 matchExpressions:
                   - key: "role"
                     operator: In
                     values:
                     - producer
               topologyKey: "kubernetes.io/hostname"
      volumes:
      - name: ipc
        emptyDir:
          medium: Memory
      - name: config
        configMap:
          name: configs
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: "longhorn"
      resources:
        requests:
          storage: 20Gi
