k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: relay-lb
  namespace: cardano
spec:
  type: LoadBalancer
  selector:
    role: relay
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: relay-int
  namespace: cardano
spec:
  clusterIP: None
  selector:
    role: relay
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: producer
  namespace: cardano
spec:
  selector:
    role: producer
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: relay-metrics
  namespace: cardano
spec:
  selector:
    role: producer
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: cardano-mainnet-node-prometheus-service
  namespace: cardano
  labels:
    app: cardano-mainnet-node
spec:
  selector:
    app: cardano-mainnet-node
  ports:
    - name: metrics
      port: 12798
      targetPort: 12798
