k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: producer-network-policy
  namespace: cardano
spec:
  podSelector:
    matchLabels:
      role: producer 
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: cardano
      podSelector:
        matchLabels:
          role: relay
    ports:
    - protocol: TCP
      port: 3001
